<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".module.common.SplashActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/splash_icon"
        android:drawablePadding="8dp"
        android:layout_centerInParent="true"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        />

    <TextView
        android:id="@+id/tv_splash_slog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/splash_text"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:textColor="@color/icon_text"
        android:textSize="@dimen/default_small_text_size"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/splash_designer"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:textColor="@color/icon_text"
        android:textSize="@dimen/default_small_text_size" />
</RelativeLayout>